部分细节还需美化